fixing up the spacing a bit

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -1252,7 +1252,8 @@ header {
 .propositions, .sf-propositions, .races {
   cursor: pointer;
   margin: 15px 15px 30px;
-    padding: 0;
+  padding: 0;
+  padding-top: 20px;
 }
 
 .show {
